--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "@emailjs/browser": "^4.4.1",
     "express": "^4.18.2",
     "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
